--- a/FrontEnd/src/app/components/experience/experience.component.html
+++ b/FrontEnd/src/app/components/experience/experience.component.html
@@ -4,10 +4,8 @@
     </h3>
     <div class="experience_text">
         <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit ut aliquam,
-            purus sit amet luctus venenatis, lectus magna fringilla urna,
-            Porttitor rhoncus dolor purus non enim praesent elementum facilisis leo,
-            vel fringilla est ullamcorper.
+            Here you will see a detailed list of my previous jobs, the roles I performed in each one, and a description
+            of the tasks I carried out. If you have any particular questions about any position, you can contact me!
         </p>
     </div>
     <div class="experience_grid">
