--- a/FrontEnd/src/app/components/landing/landing.component.html
+++ b/FrontEnd/src/app/components/landing/landing.component.html
@@ -19,11 +19,13 @@
                 <i class="fa-regular fa-pen-to-square"></i>
             </a>
         </div>
-    </div>
-    <img class="miguel" src="/assets/resources/miguelPng.png" alt="LandingImg">
-    <div class="contact">
-        <a href="mailto:ivanlitt805@gmail.com">
-            <h4>GET ON TOUCH</h4>
-        </a>
+        <div class="containerContact">
+            <div class="contact">
+                <a href="mailto:ivanlitt805@gmail.com">
+                    <h4>GET ON TOUCH</h4>
+                </a>
+            </div>
+        </div>
+        <img class="miguel" src="/assets/resources/miguelPng.png" alt="LandingImg">
     </div>
 </section>
