--- a/FrontEnd/src/app/components/projets/edit-project.component.html
+++ b/FrontEnd/src/app/components/projets/edit-project.component.html
@@ -12,10 +12,11 @@
                     <input type="text" class="form-control" id="descripcionP" name="descripcionP"
                         [(ngModel)]="proyecto.descripcionP" required>
                 </div>
-                <!-- <div class="form-group">
+                <div class="form-group">
                     <label for="imageP">Imagen</label>
-                    <input type="file" class="form-control" id="imageP" name="imageP" [(ngModel)]="proyecto.imageP" required>
-                </div> -->
+                    <input type="file" class="form-control" id="imageP" name="imageP" [(ngModel)]="proyecto.imageP"
+                        (change)="uploadImage($event)" accept=".jpg, .jpeg, .png">
+                </div>
                 <div class="form-group">
                     <label for="fechaInicioP">Fecha</label>
                     <input type="text" class="form-control" id="fechaInicioP" name="fechaInicioP"
