--- a/FrontEnd/src/app/components/projets/projets.component.html
+++ b/FrontEnd/src/app/components/projets/projets.component.html
@@ -16,8 +16,7 @@
                         <i class="fa-solid fa-trash-can"></i>
                     </a>
                     <span class="projet_date">{{Proyecto.fechaInicioP}}</span>
-                    <!-- <img [src]="{{Proyecto.imageP}}" alt="project"> -->
-                    <img src="../../../assets/resources/takepro.jpg" alt="">
+                    <img src="{{Proyecto.imageP}}" alt="project">
                     <div class=" projets_card_text">
                         <h4>{{Proyecto.nombreP}}</h4>
                         <p>
