--- a/FrontEnd/src/app/components/skills/skills.component.css
+++ b/FrontEnd/src/app/components/skills/skills.component.css
@@ -110,6 +110,11 @@ svg {
   transition: 0.5s;
 }
 
+.colum img {
+  width: 120px;
+}
+
+
 /*---------------------------KeyFrames---------------------------*/
 
 @keyframes carga {
