--- a/FrontEnd/src/app/components/skills/skills.component.html
+++ b/FrontEnd/src/app/components/skills/skills.component.html
@@ -14,7 +14,7 @@
             <ng-container *ngFor="let Skill of skill">
                 <ng-container *ngIf="Skill.typeSk === 'Tools'">
                     <div class="progressCircle" style="--porcentaje: {{Skill.porcentajeSk * 3.1}}">
-                        <img src="{{Skill.imageSk}}" alt="">
+                        <img src="{{Skill.imageSk}}" alt="skill" class="skillimg">
                         <svg width="110px" height="110px" xmlns="http://www.w3.org/2000/svg" version="1.1">
                             <defs>
                                 <linearGradient id="gradiente-stroke" x1="0%" y1="0%" x2="100%" y2="0%">
