--- a/FrontEnd/src/app/components/education/edit-education.component.html
+++ b/FrontEnd/src/app/components/education/edit-education.component.html
@@ -12,11 +12,6 @@
                     <input type="text" class="form-control" id="nombreE" name="nombreE" [(ngModel)]="education.nombreE"
                         required>
                 </div>
-
-                <!-- <div class="form-group">
-                    <label for="cargoE">Imagen</label>
-                    <input type="text" class="form-control" id="cargoE" name="cargoE" [(ngModel)]="cargoE" required>
-                </div> -->
                 <div class="form-group">
                     <label for="fechaInicioE">Fecha inicio</label>
                     <input type="text" class="form-control" id="fechaInicioE" name="fechaInicioE"
@@ -26,6 +21,11 @@
                     <label for="fechaFinE">Fecha fin</label>
                     <input type="text" class="form-control" id="fechaFinE" name="fechaFinE"
                         [(ngModel)]="education.fechaFinE">
+                </div>
+                <div class="form-group">
+                    <label for="imageP">Imagen</label>
+                    <input type="file" class="form-control" id="imageP" name="imageP" [(ngModel)]="education.imagenE"
+                        (change)="uploadImage($event)" accept=".jpg, .jpeg, .png">
                 </div>
                 <div class="button-container">
                     <button class="btn btn-primary">Editar educacion</button>
