--- a/FrontEnd/src/app/components/login/login.component.css
+++ b/FrontEnd/src/app/components/login/login.component.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,200;0,500;0,600;1,300;1,700&display=swap');
 
-.center{
+.center {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -12,6 +12,7 @@
   box-shadow: 40px 40px 8px black;
   border: 2px solid black;
 }
+
 .center h1 {
   margin-top: 25px;
   padding: 10px;
@@ -19,15 +20,18 @@
   text-align: center;
   border-bottom: 1px solid silver;
 }
-.center form{
+
+.center form {
   padding: 0 40px;
   box-sizing: border-box;
 }
-form .txt_field{
-  position:relative;
+
+form .txt_field {
+  position: relative;
   margin: 30px 0;
 }
-.txt_field input{
+
+.txt_field input {
   width: 100%;
   padding: 0 5px;
   height: 40px;
@@ -36,7 +40,8 @@ form .txt_field{
   background: none;
   outline: none;
 }
-.txt_field label{
+
+.txt_field label {
   position: absolute;
   top: 50%;
   left: 5px;
@@ -46,39 +51,48 @@ form .txt_field{
   pointer-events: none;
   transition: .5s;
 }
-.txt_field span::before{
+
+.txt_field span::before {
   content: '';
   position: absolute;
   top: 40px;
   left: 0;
   width: 0%;
   height: 2px;
-  background: #F76525 ;
+  background: #F76525;
   transition: .5s;
 }
-.txt_field input:focus ~ label,.text_field input:valid ~ label{
+
+.txt_field input:focus~label,
+.text_field input:valid~label {
   top: 5px;
   color: #F76525;
 }
-.txt_field input:focus ~ span::before,.text_field input:valid ~ span::before{
+
+.txt_field input:focus~span::before,
+.text_field input:valid~span::before {
   width: 100%;
 }
-.pass{
+
+.pass {
   margin: -5px 0 20px 5px;
   color: #a6a6a6;
   cursor: pointer;
 }
-.pass:hover{
+
+.pass:hover {
   text-decoration: underline;
 }
+
 .submitButton:active {
   background-color: gray;
 }
-input[type='submit']{
+
+input[type='submit'] {
   width: 100%;
   height: 50px;
   border: 1px solid;
-  background: black ;
+  background: black;
   border-radius: 25px;
   font-size: 18px;
   color: #e9f4fb;
@@ -86,10 +100,12 @@ input[type='submit']{
   cursor: pointer;
   outline: none;
 }
-input[type='submit']:hover{
+
+input[type='submit']:hover {
   border-color: #2691d9;
   transition: .5s;
 }
+
 i.fa-solid.fa-circle-xmark {
   position: absolute;
   right: 10px;
@@ -97,6 +113,7 @@ i.fa-solid.fa-circle-xmark {
   font-size: 28px;
   color: #000;
 }
+
 .copyright {
   display: flex;
   font-size: 14px;
@@ -104,7 +121,8 @@ i.fa-solid.fa-circle-xmark {
   margin-top: 20px;
   justify-content: center;
 }
-@media screen and (max-width: 480px){
+
+@media screen and (max-width: 480px) {
   .center {
     width: 300px;
   }
