cambios en el front

--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -10,7 +10,7 @@
         <div class="about_text">
             <p>
                 {{persona?.sobreMi}} <a download="CV_Ivan_Litt"
-                    href="/assets/resources/download/CV_IvanLitt(ES).pdf">here</a>.
+                    href="portfolio-spa-front\src\assets\resources\download\Cv-IvanLitt(ES).pdf">here</a>.
             </p>
         </div>
         <div class="about_locate">
@@ -21,7 +21,7 @@
         </div>
         <div class="containerContact">
             <div class="contact">
-                <a href="mailto:ivanlitt805@gmail.com">
+                <a href="mailto:ivanlitt8@gmail.com">
                     <h4>GET ON TOUCH</h4>
                 </a>
             </div>
