--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -9,8 +9,8 @@
         <div class="about_bar"></div>
         <div class="about_text">
             <p>
-                {{persona?.sobreMi}} <a download="CV_Ivan_Litt"
-                    href="portfolio-spa-front\src\assets\resources\download\Cv-IvanLitt(ES).pdf">here</a>.
+                {{persona?.sobreMi}} <a download="CV_Ivan_Litt.pdf"
+                    href="https://drive.google.com/file/d/143gfSx_wgCB78mZZa8ASuIsrt8U7tzgG/view?usp=sharing">here</a>.
             </p>
         </div>
         <div class="about_locate">
