--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -6,7 +6,7 @@
             <div class="txt_field">
                 <input type="text" id="nombreUsuario" name="nombreUsuario" class="form-control form-control lg"
                     [(ngModel)]="nombreUsuario" (input)="onInput()" required />
-                <label class="form-label" for="nombreUsuario" *ngIf="showUserLabel">Usuario</label>
+                <label class="form-label" for="nombreUsuario" *ngIf="showUserLabel">User</label>
                 <span></span>
             </div>
             <div class="txt_field">
