PRE creacion de pantalla de carga

--- a/src/app/components/landing/landing.component.html
+++ b/src/app/components/landing/landing.component.html
@@ -22,7 +22,7 @@
         <div class="containerContact">
             <div class="contact">
                 <a href="mailto:ivanlitt8@gmail.com">
-                    <h4>GET ON TOUCH</h4>
+                    <h4>GET IN TOUCH</h4>
                 </a>
             </div>
         </div>
