--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav class="menu">
     <section class="menu_container">
         <a class="menu_logo" href="https://www.argentina.gob.ar/produccion/argentina-programa/segunda-etapa">
-            <img src="/assets/resources/APLogo.png" alt="Argentina Programa">
+            <img src="/assets/resources/APLogo.png" alt="Argentina Programa" style="display: none;">
         </a>
         <ul #list class="menu_links">
             <li class="menu_item">
